# usa_housing_analysis

./: README.md  pyproject.toml
usa_housing_analysis/: usa_housing_analysis.ipynb
usa_housing_analysis/.ipynb_checkpoints/: usa_housing_analysis-checkpoint.ipynb
usa_housing_analysis/mlruns/.trash/908697471354758320/: meta.yaml
usa_housing_analysis/mlruns/0/: meta.yaml
usa_housing_analysis/mlruns/265355304442857659/: meta.yaml
usa_housing_analysis/mlruns/265355304442857659/08e42e96f7034e2b911e2ffdd6520eff/: meta.yaml
usa_housing_analysis/mlruns/265355304442857659/0c01eb78789c43ea8022d7f8ec0eb464/: meta.yaml
usa_housing_analysis/mlruns/265355304442857659/0c9ada6a8f81467cbafed3532eca40c9/: meta.yaml
usa_housing_analysis/mlruns/265355304442857659/0e9dfd3e4e31447387d380ec90dac42a/: meta.yaml
usa_housing_analysis/mlruns/265355304442857659/157fe7b80fbc42acb7ae5f4205a2f1b0/: meta.yaml
usa_housing_analysis/mlruns/265355304442857659/2943d1c5a0bd430f916c743ad0e4c74b/: meta.yaml
usa_housing_analysis/mlruns/265355304442857659/2b85f17d8343464cb90c6eb63fc32a0a/: meta.yaml
usa_housing_analysis/mlruns/265355304442857659/2f0fe9cc39be4fc6bd3fe1732ba21138/: meta.yaml
usa_housing_analysis/mlruns/265355304442857659/376977af1045458ea1c4606dbb5372a6/: meta.yaml
usa_housing_analysis/mlruns/265355304442857659/40f8170d380e4082ac34c9a9029b12ba/: meta.yaml
usa_housing_analysis/mlruns/265355304442857659/44b79763f5db4d01b5ecb571ad84c84c/: meta.yaml
usa_housing_analysis/mlruns/265355304442857659/4cebd79f877b4bba85cda1071bccf886/: meta.yaml
(+298 files in other folders)
