[tool.poetry]
name = "usa-housing-analysis"
version = "0.1.0"
description = ""
authors = ["marianaph6 <mariana1996.mph@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
xgboost = "^2.1.3"
mlflow = "^2.18.0"
notebook = "^7.2.2"
ipykernel = "^6.29.5"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
